# WT9932P4-TINY

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md
.github/: copilot-instructions.md  pull_request_template.md
blink/: README.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32p4
docs/: HARDWARE.md  LOCAL_AI_HANDOFF_PROMPT.md  PROJECT_MAP.md  SETUP_WINDOWS.md  VALIDATION.md
lvgl_demo_v8/: README.md  sdkconfig
lvgl_demo_v9/: AI_PORTING_GUIDE.md  ESP32P4_虚拟手柄整合路线.md  README.md  flash_com20.bat  idf-run.cmd  sdkconfig  sdkconfig.defaults
lvgl_demo_v9/main/: CMakeLists.txt  idf_component.yml  main.c
lvgl_demo_v9_no_gt911/: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
src/: Dpad.c  codex_gpt5_slider_2d_demo.c  gamepad_action_mapper.c  gamepad_action_mapper.h  gamepad_button_module.c  gamepad_debug_overlay.c  gamepad_debug_overlay.h  gamepad_hid_device.c  gamepad_hid_device.h  gamepad_hid_report.c  gamepad_hid_report.h  gamepad_hid_selftest.c  gamepad_hid_selftest.h  gamepad_input_state.c  gamepad_input_state.h  gamepad_layout_model.c  gamepad_layout_model.h  gamepad_mapping_selftest.c  gamepad_mapping_selftest.h  gamepad_module_builders.h  gamepad_multitouch_input.c  gamepad_multitouch_input.h  gamepad_output.c  gamepad_output.h  gamepad_usb_descriptors.c  gamepad_usb_descriptors.h  gamepad_view_motion.c  gamepad_view_motion.h  joystick_stick_demo.c  shoulder_keys_demo.c  xbox_touch_gamepad_layout_demo.c  xbox_touch_gamepad_layout_demo.h
tests/: gamepad_hid_report_layout_test.c  gamepad_view_motion_test.c  (+1 more)
(+17 files in other folders)
